[gd_scene load_steps=4 format=3 uid="uid://edmayy17mi64"]

[ext_resource type="Texture2D" uid="uid://mh4ky2ce8mm1" path="res://assets/icons/open.png" id="1_76i1w"]
[ext_resource type="Script" path="res://ui/button_texture.gd" id="2_h551h"]
[ext_resource type="AudioStream" uid="uid://bxsjbwos6tp4s" path="res://assets/sfx/button.wav" id="3_eh52j"]

[node name="TextureButton" type="TextureButton"]
self_modulate = Color(0.337255, 0.392157, 0.756863, 1)
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
texture_normal = ExtResource("1_76i1w")
stretch_mode = 3
script = ExtResource("2_h551h")

[node name="AudioPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_eh52j")
volume_db = -10.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
